Changes to theories_signatures suggested by Andrej's mail.

--- a/trunk/doc/case/case.tex
+++ b/trunk/doc/case/case.tex
@@ -80,7 +80,6 @@
 \newcommand{\RZ}{\keywd{rz}}
 \newcommand{\SET}{\keywd{set}}
 \newcommand{\SOME}{\keywd{some}}
-\newcommand{\SOMEONE}{\keywd{some1}}
 \newcommand{\STABLE}{\keywd{stable}}
 \newcommand{\STABLEPROP}{\keywd{Stable}}
 \newcommand{\STRUCTURE}{\keywd{structure}}
@@ -89,6 +88,7 @@
 \newcommand{\THEORY}{\keywd{theory}}
 \newcommand{\THY}{\keywd{thy}}
 \newcommand{\TRUE}{\keywd{true}}
+\newcommand{\UNIQUE}{\keywd{unique}}
 \newcommand{\UNIT}{\mbox{\Verb| unit |}}
 \newcommand{\WITH}{\keywd{with}}
 
