--- a/trunk/doc/case/conclusion.tex
+++ b/trunk/doc/case/conclusion.tex
@@ -3,6 +3,14 @@
 
 We are the champions.
 
+\comment{The following either goes into future work, or else into a
+  discussion of the free join semilattice (where polymorphism would
+  yield a fold-like operator).}  The translation of axioms
+parameterized by models into polymorphism (instead of functors) is
+essentially the phase-splitting translation of Harper, Mitchell, and
+Moggi \cite{harper+:popl90}.
+
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "case"
