*** empty log message ***

--- a/trunk/doc/case/intro.tex
+++ b/trunk/doc/case/intro.tex
@@ -18,13 +18,12 @@ meaning of a constructive theory and expresses it as a programming
 specification.
 
 We emphasize that RZ does \emph{not} extract programs from proofs---in
-fact, there is no way to write a proof in our system. We work ``one
-level above'', so to speak, and just determine what the programs are
-supposed to do, i.e., we provide specifications for them. We leave it
-to the programmer, or to another tool, to construct the programs as he
-or she best knows. This leaves the programmer completely free to write
-the most efficient programs that do not necessarily correspond to any
-proofs.
+fact, there is no way to write a proof in our system. We just
+determine what the programs are supposed to do, i.e., we provide
+specifications for them. We leave it to the programmer, or to another
+tool, to construct the programs as he or she best knows. This leaves
+the programmer completely free to write the most efficient programs
+that do not necessarily correspond to any proofs.
 
 The original aim of RZ was to help with development of data structures
 for computable mathematics. If one sets out to actually compute
