--- a/trunk/doc/case/theories_signatures.tex
+++ b/trunk/doc/case/theories_signatures.tex
@@ -110,30 +110,30 @@ summarized in Figure~\ref{fig:input}, where brackets imply optional
 elements.
 
 
-Theories may declare or define relations.  They may be \Verb|stable|,
+Theories may declare or define relations. They may be \Verb|stable|,
 i.e., their computational interpretation is trivial (see
-Section~\ref{sec:implementation} for further discussion of this point).
-Axioms can universally quantify over all models of a theory.
-  This is useful for describing universaility properties, such as
-  initiality of an algebra or finality of a coalgebra.
+Section~\ref{sec:implementation} for further discussion of this
+point). Axioms can universally quantify over all models of a theory.
+This is useful for describing universaility properties, such as
+initiality of an algebra or finality of a coalgebra.
   
-  The propositions are the familiar ones from first-order logic;
-  $\UNIQUE$ is unique existence ($\exists!$). In addition to the basic
-  empty ($\ZERO$) and unit ($\ONE$) sets, one can form cartesian
-  products, function spaces, tagged disjoint unions, subsets, and
-  quotients by stable equivalence relations. The corresponding
-  introduction and elimination forms appear in the language of terms.
-  For example, $\Term\PERCENT\ \metav{relation}$ is the equivalence
-  class under $\metav{relation}$ containing $\Term$, while $\LET\ x
-  \PERCENT \metav{relation} \mbox{\Verb| =|}$ $ \Term_1\ \IN\ \Term_2$
-  binds $x$ to a representative of the equivalence class $\Term_1$ to
-  be used in $\Term_2$. $\Term \SUBIN \Set$ injects $\Term$ into a
-  given subset (recording a proof obligation of the term actually
-  being a member of the subset), while $\Term \SUBOUT \Set$ projects
-  $\Term$ from a subset out into its superset $\Set$.  The value of
-  the description operator $\THE\ x\PERIOD \Prop$ is the unique $x$
-  satisfying $\Prop$; using it incurs the obligation of proving that
-  there is exactly one such $x$.
+The propositions are the familiar ones from first-order logic;
+$\UNIQUE$ is unique existence ($\exists!$). In addition to the basic
+empty ($\ZERO$) and unit ($\ONE$) sets, one can form cartesian
+products, function spaces, tagged disjoint unions, subsets, and
+quotients by stable equivalence relations. The corresponding
+introduction and elimination forms appear in the language of terms.
+For example, $\Term \PERCENT \metav{relation}$ is the equivalence
+class under $\metav{relation}$ containing $\Term$, while $\LET\ x
+\PERCENT \metav{relation} \mbox{\Verb| = |} \Term_1\ \IN\ \Term_2$
+binds $x$ to a representative of the equivalence class $\Term_1$ to be
+used in $\Term_2$. The expression $\Term \SUBIN \Set$ injects $\Term$
+into a given subset (recording a proof obligation of the term actually
+being a member of the subset), while $\Term \SUBOUT \Set$ projects
+$\Term$ from a subset out into its superset $\Set$. The value of the
+description operator $\THE\ x \,.\, \Prop$ is the unique $x$
+satisfying $\Prop$; using it incurs the obligation of proving that
+there is exactly one such~$x$.
 
 
 \subsection{Signatures}
@@ -151,11 +151,11 @@ of a theory.  We therefore generate signatures augmented by assertion
 comments, which specify constraints on the values and functions an
 implementation beyond their type.  It is the responsibility of the
 programmer to check that the implementation satisfies these
-assertions, as our tool does not attempt to do any theorem proving.
+assertions, as RZ does not attempt to do any theorem proving.
 
-Assertions are written in ordinary classical first-order logic. (Since
-programmers typically are not trained in constructive logic, this
-may make it easier to verify the assertions.)
+Assertions are written in ordinary classical first-order logic. Since
+programmers typically are not trained in constructive logic, this may
+make it easier to verify the assertions.
 
 The output for the theory \Verb|SQGROUP| above is then:
 \VerbatimInput{semigroup.mli} 
